src/test/data/c/fail/redeclaration.c.err
data/c/fail/redeclaration.c:2:1-8: error: conflicting types for 'g'
 2 | char g;
   | ^~~~~~~
